Fix images on smaller screens

--- a/css/main.scss
+++ b/css/main.scss
@@ -135,6 +135,7 @@ ul {
     img {
         display: block;
         margin: 0 auto;
+        max-width: 100%;
     }
 
     .post-header {
